FIND_PACKAGE(Protobuf REQUIRED)

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS hub.proto test.proto)

ADD_LIBRARY(gpf_messages SHARED ${PROTO_SRCS} ${PROTO_HDRS})
TARGET_LINK_LIBRARIES(gpf_messages ${PROTOBUF_LIBRARIES})
